--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <link rel="stylesheet" type="text/css" href="librerias/bootstrap4/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css">
+    <link rel="icon" type="image/png" href="Images/iconz.png">
 </head>
 <body>
     
